# ai-image-detection

./: .gitignore  create_wds.py  earlystop.py  eval.py  evalacc.txt  pyproject.toml  requirements.txt  test.py  test_compute.py  test_robustness.py  test_visualization.py  train.py  util.py
data/: __init__.py  dataloader.py  dataset_train.py
networks/: base_model.py  clip.py  config.py  cooi.py  layers.py  patch_model.py  resnet.py  trainer.py
networks/utils/: compute_window_nums.py  eval_model.py  indices2coordinates.py  vis.py
options/: base_options.py  data_options.py  test_options.py  train_options.py
reporting/: __init__.py  google_sheets_reporter.py
storage/: azure.py  base.py  default.py  local.py
