[project]
name = "glff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azstoragetorch>=0.2.0",
    "azure-identity>=1.25.3",
    "azure-storage-blob>=12.27.0",
    "gcs-torch-dataflux>=1.4.0",
    "matplotlib>=3.10.8",
    "open-clip-torch>=3.2.0",
    "scikit-learn>=1.8.0",
    "tensorboardx>=2.6.4",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "typed-argument-parser>=1.11.0",
    "webdataset>=1.0.2",
]
